--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,5 +29,15 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
+
+en:
+  date:
+    formats:
+      default: "%d/%m/%Y"
+  time:
+    formats:
+      default: "%d/%m/%Y %H:%M"
+
+
 en:
   hello: "Hello world"
